# rust

./: .gitignore  README.md
content-types/: Cargo.toml
content-types/src/: main.rs
cookies/: .Cargo.toml.swp
cookies/src/: .main.rs.swp
cookies/templates/: .index.html.hbs.swp
form-validation/: Cargo.toml
json/: .Cargo.toml.swp
json/src/: .main.rs.swp
raw_sqlite/: .Cargo.toml.swp  Cargo.toml
raw_sqlite/src/: .main.rs.swp  main.rs
request-guards/: .Cargo.toml.swp  Cargo.toml
request-guards/src/: .main.rs.swp  main.rs
rocket/cookies/: Cargo.toml
rocket/fairings/: Cargo.toml
rocket/fairings/src/: main.rs
rocket/form-validation/src/: main.rs
rocket/handlebars-templates/: Cargo.toml
rocket/handlebars-templates/src/: main.rs
rocket/json/: Cargo.toml
rocket/json/src/: main.rs
rocket/tera-templates/: Cargo.toml
rocket/tera-templates/src/: main.rs
rocket/tera-templates/templates/: base.html.tera
tera-templates/templates/: index.html.tera
