[package]
name = "cookies"
version = "0.1.0"
authors = ["Czar Yobero <cyobero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
