[package]
name = "tera-templates"
version = "0.1.0"
authors = ["Czar Yobero <cyobero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["tera_templates"]
